2007-02-21
	- high-level component interface added
	- libHLTbase version 2:0:0
	
2007-02-20 version HLT-v0-5 tagged
	
2007-02-20
	- Cellular Automaton tracker added to TPC Lib
	- TPC OnlineDisplay updated to the lates version of the CERN HLT cluster
	  libAliHLTTPCDisplay version for the AliHLTGUI v 1.5.2
	- TPC ESD writer component finalized
2007-02-05
	- improvements in AliHLTFilePublisher/Writer
	- minor fix in component handler to pipe log messages during registration
	  of standard components into right log channel
	- the ProcessEvent method is now a method of the component base class,
	  the actual processing method to implement is DoProcessing
	- new standard component AliHLTRootFileWriterComponent added
	- TPCLib: AliHLTTPCEsdWriterComponent added, conversion of AliHLTTPCTrack
	  to AliTPCtrack implemented (not finished)
	- small fixes in stand-alone build system (libAliHLTPHOS.pkg, *LinkDef.h)
	
2007-01-19
	- AliHLTFileWriter added, handling of standard components in libHLT
	  added to ComponentHandler
	- several fixes in the HLT offline framework
2007-01-05
	- changes according to coding conventions and documentation
	- AliHLTTPCDigitReaderRaw: HAVE_TPC_MAPPING dependent implementation
	  fixed in order to make class definition independent
	- helper functions for data structure handling added
	- libHLTbase.pkg and libAliHLTSample.pkg included to the stand-alone
	  build system
	- AliHLTFilePublisher added
	- target to create the stand-alone sample library package added
2006-12-28 changes according to coding conventions
	- special characters in function names have been removed in the
	  internal usage, the C interface still uses them in order to preserve
	  backward compatibility
2006-12-18 commit from Jochen
	- TPCDisplay library version 2
	  - library version for the AliHLTGUI v 1.5
	- argument scan of the AliHLTTPCDigitReaderRaw cleaned up
2006-12-12
	- use_newio switch removed, always on