@@ -1,3 +1,12 @@
+2007-01-03 changes from Gaute (TPC)
+	- added InterMerger to SliceTrackerComponent, can be switched off by
+	  component argument 'disable-merger'
+	- new data type 'TRACKS' defined for TPC describing tracks in global
+	  coordinates
+	- GlobalMergerComponent has TRACKS/TPC as output data type
+	- new component argument to ClusterFinderComponent: timebins <n> specifies
+	  the number of timebins to overcome the discrepancy between simulated
+	  and real data
 2007-02-21
 	- high-level component interface added
 	- libHLTbase version 2:0:0
@@ -6,7 +15,7 @@
 	
 2007-02-20
 	- Cellular Automaton tracker added to TPC Lib
-	- TPC OnlineDisplay updated to the lates version of the CERN HLT cluster
+	- TPC OnlineDisplay updated to the latest version of the CERN HLT cluster
 	  libAliHLTTPCDisplay version for the AliHLTGUI v 1.5.2
 	- TPC ESD writer component finalized
 2007-02-05
